force-app/main/default/objects/numm__Inventaire__c/numm__Inventaire__c.object-meta.xml
<CustomObject>
    <label>Inventaire</label>
    <nameField>
        <label>Inventaire</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventaires</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>