force-app/main/default/objects/numm__Inventaire__c/fields/numm__Commentaire__c.field-meta.xml
<CustomField>
    <fullName>numm__Commentaire__c</fullName>
    <label>Commentaire</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>