force-app/main/default/objects/numm__Inventaire__c/fields/numm__critere__c.field-meta.xml
<CustomField>
    <fullName>numm__critere__c</fullName>
    <label>critère</label>
    <length>120</length>
    <type>Text</type>
</CustomField>