force-app/main/default/objects/numm__Inventaire__c/fields/numm__Date_end__c.field-meta.xml
<CustomField>
    <fullName>numm__Date_end__c</fullName>
    <label>Date de fin</label>
    <type>Date</type>
</CustomField>