force-app/main/default/objects/numm__Inventaire__c/fields/numm__Date_start__c.field-meta.xml
<CustomField>
    <fullName>numm__Date_start__c</fullName>
    <label>Date de début</label>
    <type>Date</type>
</CustomField>