force-app/main/default/objects/numm__Inventaire__c/fields/numm__Entrepot__c.field-meta.xml
<CustomField>
    <fullName>numm__Entrepot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entrepot</label>
    <referenceTo>numm__Entrepot__c</referenceTo>
    <relationshipLabel>Inventaires</relationshipLabel>
    <relationshipName>Inventaires</relationshipName>
    <type>Lookup</type>
</CustomField>