force-app/main/default/objects/numm__Inventaire__c/fields/numm__Produit__c.field-meta.xml
<CustomField>
    <fullName>numm__Produit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produit</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Inventaires</relationshipLabel>
    <relationshipName>Inventaires</relationshipName>
    <type>Lookup</type>
</CustomField>