force-app/main/default/objects/numm__Inventaire__c/fields/numm__Site__c.field-meta.xml
<CustomField>
    <fullName>numm__Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site</label>
    <referenceTo>numm__Site__c</referenceTo>
    <relationshipLabel>Inventaires</relationshipLabel>
    <relationshipName>Inventaires</relationshipName>
    <type>Lookup</type>
</CustomField>