force-app/main/default/objects/numm__Inventaire__c/fields/numm__Statut__c.field-meta.xml
<CustomField>
    <fullName>numm__Statut__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A Planifier</fullName>
            </value>
            <value>
                <fullName>Planifié</fullName>
            </value>
            <value>
                <fullName>En cours</fullName>
            </value>
            <value>
                <fullName>Terminé</fullName>
            </value>
            <value>
                <fullName>Annulé</fullName>
            </value>
            <value>
                <fullName>Suspendu</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>